# rust-cli-apps

./: README.md  random.md
grrs/: .tool-versions  Cargo.toml  random.md
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
